--- a/index.html
+++ b/index.html
@@ -975,9 +975,9 @@
                 </div>
                 
                 <div class="footer-policies">
-                    <a href="#" class="policy-link" id="privacyPolicy">Privacy Policy</a>
-                    <a href="#" class="policy-link" id="termsOfUse">Terms of Use</a>
-                    <a href="#" class="policy-link" id="cookiePolicy">Cookie Policy</a>
+                    <a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a>
+                    <a href="Term-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a>
+                    <a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a>
                 </div>
                 
                 <div class="footer-message">
