--- a/index.html
+++ b/index.html
@@ -975,9 +975,11 @@
                 </div>
                 
                 <div class="footer-policies">
-                    <a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a>
-                    <a href="Term-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a>
-                    <a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a>
+                    <ul>
+                 <li></li>   <a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a></li>
+                  <li></li>  <a href="Term-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a></li>
+                  <li></li>  <a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a></li>
+                        </ul>
                 </div>
                 
                 <div class="footer-message">
