--- a/index.html
+++ b/index.html
@@ -975,12 +975,13 @@
                 </div>
                 
                 <div class="footer-policies">
-                    <ul>
-                 <li></li>   <a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a></li>
-                  <li></li>  <a href="Term-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a></li>
-                  <li></li>  <a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a></li>
-                        </ul>
-                </div>
+    <ul>
+        <li><a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a></li>
+        <li><a href="Terms-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a></li>
+        <li><a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a></li>
+    </ul>
+</div>
+
                 
                 <div class="footer-message">
                     <p>Your dreams matter. The Genie is always listening ✨</p>
