--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                 <div class="footer-policies">
     <ul>
         <li><a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a></li>
-        <li><a href="Terms-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a></li>
+        <li><a href="Term-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a></li>
         <li><a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a></li>
     </ul>
 </div>
