--- a/index.html
+++ b/index.html
@@ -974,11 +974,13 @@
                     Contact: magicgeniewish@gmail.com
                 </div>
                 
-                <div class="footer-policies">
-                    <a href="#" class="policy-link" id="privacyPolicy">Privacy Policy</a>
-                    <a href="#" class="policy-link" id="termsOfUse">Terms of Use</a>
-                    <a href="#" class="policy-link" id="cookiePolicy">Cookie Policy</a>
-                </div>
+        <div class="footer-policies">
+    <a href="Privacy-Policy.html" class="policy-link" id="privacyPolicy">Privacy Policy</a>
+    <a href="Terms-Of-Use.html" class="policy-link" id="termsOfUse">Terms of Use</a>
+    <a href="Cookie-Policy.html" class="policy-link" id="cookiePolicy">Cookie Policy</a>
+</div>
+
+
                 
                 <div class="footer-message">
                     <p>Your dreams matter. The Genie is always listening ✨</p>
