--- a/index.html
+++ b/index.html
@@ -1083,9 +1083,9 @@
                 </div>
                 
                 <div class="footer-policies">
-                    <a href="#" class="policy-link" id="privacyPolicy">Privacy Policy</a>
-                    <a href="#" class="policy-link" id="termsOfUse">Terms of Use</a>
-                    <a href="#" class="policy-link" id="cookiePolicy">Cookie Policy</a>
+            <a href="policies.html?policy=privacy" class="policy-link">Privacy Policy</a>
+            <a href="policies.html?policy=terms" class="policy-link">Terms of Use</a>
+            <a href="policies.html?policy=cookie" class="policy-link">Cookie Policy</a>
                 </div>
                 
                 <div class="footer-message">
