--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,16 @@
             </div>
             
             <div class="ads-container">
-                Google AdSense Banner (728x90)
+              <script type="text/javascript">
+	atOptions = {
+		'key' : '67f7380f70b24be32fc5c4d8a9df9f59',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/67f7380f70b24be32fc5c4d8a9df9f59/invoke.js"></script>
             </div>
         </main>
         
